Исправление оформления главной страницы.

--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="hub navline">
+    <header class="header">
+        <nav class="hub navline">
             <a href="index.html" class="hub homelogo link">
-                <img src="img/hubavatar.webp" alt="Hub Avatar"  class="hub homelogo image">
+                <img src="img/hubavatar.webp" alt="Hub Avatar" class="hub homelogo image">
             </a>
-            <a href="index.html" class="hub title">
-                <h1 class="hub title">Мастерия</h1>
-            </a>
-            <a class="hub nav element first">Майнкрафт</a>
-            <a class="hub nav element">Ивенты</a>
-            <a class="hub nav element" href="wiki.html">Вики</a>
-            <a class="hub nav element">Аниме</a>
-            <a class="hub nav element">?????</a>
-        </div>
+            <a href="index.html" class="hub title">Мастерия</a>
+            
+            <a href="#" class="hub nav element first">Майнкрафт</a>
+            <a href="#" class="hub nav element">Ивенты</a>
+            <a href="wiki.html" class="hub nav element">Вики</a>
+            <a href="#" class="hub nav element">Аниме</a>
+            <a href="#" class="hub nav element">?????</a>
+        </nav>
+
         <div class="hub descriptionline">
-            <h2 class="hub maintext_title">Мастерия - сообщество народа!</h2>
-            <p class="hub description">Мастерия - крупный Discord-сервер с богатой, 4-ёх летней историей, отзывчивым и ламповым комьюнити, необычными ивентами с щедрыми призами и справедливой администрацией!</p>
+            <h1 class="hub maintext_title">Мастерия — сообщество народа!</h1>
+            <p class="hub description">
+                Мастерия — крупный Discord-сервер с богатой, 4-ёх летней историей, 
+                отзывчивым и ламповым комьюнити, необычными ивентами с щедрыми 
+                призами и справедливой администрацией!
+            </p>
         </div>
-    </div>
+    </header>
+
+    <footer class="footer">
+        Наши ссылки: ...
+    </footer>
 </body>
 </html>
