--- a/wiki.html
+++ b/wiki.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wiki">
-
+    <div class="wiki header">
+        <div class="hub navline">
+            <a href="index.html" class="hub homelogo link">
+                <img src="img/hubavatar.webp" alt="Hub Avatar"  class="hub homelogo image">
+            </a>
+            <a href="index.html" class="hub title">
+                <h1 class="hub title">Мастерия</h1>
+            </a>
+            <a class="wiki nav element first" href="history.html">История</a>
+             <a class="wiki nav element" href="wiki.html">Вики</a>
+            <a class="wiki nav element" href="membersdesk.html">Доска Почёта</a>
+        </div>
+        <div class="wiki mainpart">
+            <div class="wiki side-bar">
+                На этой странице:
+            </div>
+            <div class="wiki main description">Бла-бла-бла</div>
+        </div>
     </div>
 </body>
 </html>
