--- a/index.html
+++ b/index.html
@@ -6,33 +6,31 @@
     <title>Masteria</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header class="header">
-        <nav class="hub navline">
+<body class="hubpage">
+    <nav class="hub navline"> <!--Навигация по всему сайту-->
+        <div class="hublink">
             <a href="index.html" class="hub homelogo link">
-                <img src="img/hubavatar.webp" alt="Hub Avatar" class="hub homelogo image">
+                <img src="img/hubavatar.webp" alt="Hub Avatar"  class="hub homelogo image">
             </a>
-            <a href="index.html" class="hub title">Мастерия</a>
-            
-            <a href="#" class="hub nav element first">Майнкрафт</a>
-            <a href="#" class="hub nav element">Ивенты</a>
-            <a href="wiki.html" class="hub nav element">Вики</a>
-            <a href="#" class="hub nav element">Аниме</a>
-            <a href="#" class="hub nav element">?????</a>
-        </nav>
-
-        <div class="hub descriptionline">
-            <h1 class="hub maintext_title">Мастерия — сообщество народа!</h1>
-            <p class="hub description">
-                Мастерия — крупный Discord-сервер с богатой, 4-ёх летней историей, 
-                отзывчивым и ламповым комьюнити, необычными ивентами с щедрыми 
-                призами и справедливой администрацией!
-            </p>
+            <a href="index.html" class="hub title">
+                <h1 class="hub title">Мастерия</h1>
+            </a>
         </div>
-    </header>
+        <div class="mainnav">
+            <a class="hub nav element first">Ивенты</a>
+            <a class="hub nav element">Майнкрафт</a>
+            <a class="hub nav element" href="wiki.html">Вики</a>
+            <a class="hub nav element">Аниме-Рейтинг</a>
+            <a class="hub nav element">?????</a>
+        </div>
 
-    <footer class="footer">
-        Наши ссылки: ...
-    </footer>
+    </nav>
+
+    <section class="section">
+        <div class="hub descriptionline">
+            <h2 class="hub maintext_title">Мастерия - сообщество народа!</h2>
+            <p class="hub description">Мастерия - крупный Discord-сервер с богатой, 4-ёх летней историей, отзывчивым и ламповым комьюнити, необычными ивентами с щедрыми призами и справедливой администрацией!</p>
+        </div>
+    </section> 
 </body>
 </html>
