Сделал фиксированный фон. Добавил navline в вики. Добавлена базовая информация на вики

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="hubpage">
+    <div class="hub background">
+        <p>0</p>
+    </div>
     <nav class="hub navline"> <!--Навигация по всему сайту-->
         <div class="hublink">
             <a href="index.html" class="hub homelogo link">
@@ -26,7 +29,7 @@
 
     </nav>
 
-    <section class="section">
+    <section class="hub section">
         <div class="hub descriptionline">
             <h2 class="hub maintext_title">Мастерия - сообщество народа!</h2>
             <p class="hub description">Мастерия - крупный Discord-сервер с богатой, 4-ёх летней историей, отзывчивым и ламповым комьюнити, необычными ивентами с щедрыми призами и справедливой администрацией!</p>
