Добавлена кнопка 'Войти' в навбар (ПК: правый верхний угол, мобильные: рядом с кнопкой меню)

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
                 <h1>Мастерия</h1>
             </a>
         </div>
-        <button class="navbar-toggle" aria-label="Меню">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+        <div class="navbar-right">
+            <button class="navbar-toggle" aria-label="Меню">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <a href="#" class="navbar-login-btn">Войти</a>
+        </div>
         <div class="navbar-main">
             <a href="#" class="navbar-link navbar-link--first">Ивенты</a>
             <a href="#" class="navbar-link">Майнкрафт</a>
