--- a/wiki.html
+++ b/wiki.html
@@ -18,11 +18,14 @@
                 <h1>Мастерия</h1>
             </a>
         </div>
-        <button class="navbar-toggle" aria-label="Меню">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+        <div class="navbar-right">
+            <button class="navbar-toggle" aria-label="Меню">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <a href="#" class="navbar-login-btn">Войти</a>
+        </div>
         <div class="navbar-main">
             <a href="history.html" class="navbar-link navbar-link--first">История</a>
             <a href="wiki.html" class="navbar-link">Вики</a>
