Обновлен пункт навигации: ???? -> Проекты

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#" class="navbar-link">Майнкрафт</a>
             <a href="wiki.html" class="navbar-link">Вики</a>
             <a href="#" class="navbar-link">Аниме-Рейтинг</a>
-            <a href="#" class="navbar-link">?????</a>
+            <a href="#" class="navbar-link">Проекты</a>
         </div>
     </nav>
 
