Обновлено описание на главной странице и стили текста

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
         <div class="hub-description">
             <h2 class="hub-title">Мастерия - сообщество народа!</h2>
             <p class="hub-description-text">
-                Мастерия - крупный Discord-сервер с богатой, 4-ёх летней историей, 
-                отзывчивым и ламповым комьюнити, необычными ивентами с щедрыми призами 
-                и справедливой администрацией!
+                Мастерия - достаточно крупный Discord-сервер, владельцем которого является Арт Мастер (artmaster629). Имеет богатую 4-х летнюю историю. Может похвастаться отзывчивым и ламповым комьюнити, которое благодаря прекрасной модерации/администрации, до сей поры остаётся активным и вполне адекватным. Необычные ивенты с щедрыми призами, всяческие мероприятия, открытия часто происходят на Мастерии и дарят множество незабываемых эмоций и впечатлений. 
+                Главная политика Мастерии это то, что Мастерия - это сообщество народа. Сообщество играет большую роль в развитии данного Discord-сервера. Именно благодаря ему и умелой харизме Арта, сообщество продолжает удивлять своей отзывчивостью, умелостью в реализации крупных проектов.
             </p>
         </div>
     </section>
